--- a/WebCMS/src/main/webapp/WEB-INF/web.xml
+++ b/WebCMS/src/main/webapp/WEB-INF/web.xml
@@ -25,4 +25,15 @@
      <servlet-name>rest</servlet-name>
      <url-pattern>/*</url-pattern>
   </servlet-mapping>
+
+  <filter>
+    <filter-name>permissionCheckerFilter</filter-name>
+    <filter-class>com.cms.security.PermissionCheckerFilter</filter-class>
+  </filter>
+
+  <filter-mapping>
+    <filter-name>permissionCheckerFilter</filter-name>
+    <url-pattern>/*</url-pattern>
+  </filter-mapping>
+
 </web-app>
