--- a/WebCMS/src/main/webapp/WEB-INF/web.xml
+++ b/WebCMS/src/main/webapp/WEB-INF/web.xml
@@ -6,7 +6,7 @@
   <display-name>WebCMS Application</display-name>
 
   <servlet>
-     <servlet-name>rest</servlet-name>
+     <servlet-name>spring</servlet-name>
      <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
      <load-on-startup>1</load-on-startup>
   </servlet>
@@ -22,7 +22,7 @@
    </servlet-mapping>
 
   <servlet-mapping>
-     <servlet-name>rest</servlet-name>
+     <servlet-name>spring</servlet-name>
      <url-pattern>/*</url-pattern>
   </servlet-mapping>
 
